# oxygine-game-manager

./: .gitignore
data/: data.js  res.xml
proj.cmake/: CMakeLists.txt  run.sh
src/: entry_point.cpp  gamemanager.cpp  gamemanager.h  gamename.cpp  gamename.h  resource.cpp  resource.h
